[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/player.gd" type="Script" id=1]
[ext_resource path="res://characters/weedman/legs.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/hud.gd" type="Script" id=3]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://hud_stuff/wasted.png" type="Texture" id=5]
[ext_resource path="res://hud_stuff/cross1.png" type="Texture" id=6]
[ext_resource path="res://hud_stuff/weedman_face.png" type="Texture" id=7]
[ext_resource path="res://fonts/roboto1.tres" type="DynamicFont" id=8]
[ext_resource path="res://characters/ammo_icons.tres" type="SpriteFrames" id=9]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1.10575, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[node name="ply" type="KinematicBody" groups=["chars", "save"]]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="step_ray" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, -1 )
enabled = true
cast_to = Vector3( 0, -1.3, 0 )
collision_mask = 64

[node name="crouch_ray" type="Area" parent="."]
transform = Transform( 0.9, 0, 0, 0, 1.9, 0, 0, 0, 0.9, 0, -0.329971, 0 )
input_ray_pickable = false
monitorable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="crouch_ray"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="collider_crouch" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.7, 0, 0, 0, 0.5, 0, -0.252168, 0 )
shape = SubResource( 2 )

[node name="collider" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.8, 0, 0, 0, 0.5, 0, -1.91961, 0 )
shape = SubResource( 2 )

[node name="Rotation" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )

[node name="legs" parent="Rotation" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.02451, -0.368594 )
ply = NodePath("../..")

[node name="eyetrace" type="RayCast" parent="Rotation"]
enabled = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 52
collide_with_areas = true

[node name="Camera" type="Camera" parent="Rotation"]
cull_mask = 1048573
current = true
near = 0.001

[node name="ViewportContainer" type="ViewportContainer" parent="Rotation/Camera"]
show_behind_parent = true
light_mask = 1048575
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_group_": true
}

[node name="Viewport" type="Viewport" parent="Rotation/Camera/ViewportContainer"]
size = Vector2( 640, 480 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="Camera" type="Camera" parent="Rotation/Camera/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.40715, 0 )
cull_mask = 2
current = true
fov = 35.0

[node name="hud" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="hud_center" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="notification" type="Label" parent="hud_center"]
margin_left = -482.0
margin_top = -70.0
margin_right = 518.0
margin_bottom = -10.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 5
custom_fonts/font = SubResource( 3 )
text = "weedman"
align = 1

[node name="wasted" type="Sprite" parent="hud_center"]
visible = false
texture = ExtResource( 5 )
offset = Vector2( 16, 0 )

[node name="crosshair" type="Sprite" parent="hud_center"]
texture = ExtResource( 6 )
offset = Vector2( 19, 19 )

[node name="hud_leftup" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="hud_leftdown" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0

[node name="back1" type="ColorRect" parent="hud_leftdown"]
margin_left = 10.0
margin_top = -10.0
margin_right = 110.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.784314 )

[node name="portrait" type="Sprite" parent="hud_leftdown"]
position = Vector2( 30, 10 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[node name="health_txt" type="Label" parent="hud_leftdown"]
margin_left = 50.0
margin_right = 110.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 8 )
text = "Health"

[node name="armor_hud" type="Control" parent="hud_leftdown"]
margin_right = 40.0
margin_bottom = 40.0

[node name="back2" type="ColorRect" parent="hud_leftdown/armor_hud"]
margin_left = 130.0
margin_top = -10.0
margin_right = 230.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.784314 )

[node name="armor_txt" type="Label" parent="hud_leftdown/armor_hud"]
margin_left = 170.0
margin_right = 230.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 8 )
text = "Armor"

[node name="hud_rigtdown" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0

[node name="back2" type="ColorRect" parent="hud_rigtdown"]
margin_left = -94.0
margin_top = -10.0
margin_right = 26.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.784314 )

[node name="weapon_name" type="Label" parent="hud_rigtdown"]
margin_left = -154.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 8 )
text = "wepname"
align = 2

[node name="ammo" type="Label" parent="hud_rigtdown"]
margin_left = -94.0
margin_right = -14.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 8 )
text = "10/10"
align = 2

[node name="ammo_icon" type="AnimatedSprite" parent="hud_rigtdown"]
position = Vector2( 6, 10 )
frames = ExtResource( 9 )
animation = "shells"

[node name="secondary_ammo_hud" type="Control" parent="hud_rigtdown"]
margin_right = 40.0
margin_bottom = 40.0

[node name="back3" type="ColorRect" parent="hud_rigtdown/secondary_ammo_hud"]
margin_left = -184.0
margin_top = -10.0
margin_right = -114.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.784314 )

[node name="ammo_icon" type="AnimatedSprite" parent="hud_rigtdown/secondary_ammo_hud"]
position = Vector2( -134, 10 )
frames = ExtResource( 9 )
animation = "smg"

[node name="ammo2" type="Label" parent="hud_rigtdown/secondary_ammo_hud"]
margin_left = -184.0
margin_right = -154.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 8 )
text = "5"
align = 2

[node name="fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="levelname" type="Label" parent="fade"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -30.0
margin_right = 500.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 500, 0 )
rect_clip_content = true
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 5
custom_fonts/font = SubResource( 3 )
text = "weed"
align = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
